# Agentic-SWIFT-Processing-System

./: .gitignore  README.md  config.py  dashboard.py  main.py  pyproject.toml
agents/: evaluator_optimizer.py  orchestrator_worker.py  parallelization.py  prompt_chaining.py
agents/workflow_agents/: base_agents.py
audits/: explainability.jsonl  metrics.jsonl
services/: explainability_logger.py  llm_service.py  metrics_collector.py
