[project]
name = "swift-workflow"
version = "0.1.0"
description = "An Agentic Swift processing workflow for banks"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.5.3",
    "numpy>=2.3.2",
    "openai>=1.99.5",
    "pandas>=2.3.1",
    "plotly>=6.1.2",
    "pydantic>=2.11.7",
    "scipy>=1.16.1",
    "streamlit>=1.45.1",
]
